--- a/Doctor/WebContent/WEB-INF/web.xml
+++ b/Doctor/WebContent/WEB-INF/web.xml
@@ -11,11 +11,7 @@
  <url-pattern>/DoctorApi/*</url-pattern>
 </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>Doctor_Insert.jsp</welcome-file>
+    
   </welcome-file-list>
 </web-app>
